[package]
name = "swhen"
version = "0.1.2"
edition = "2021"
description = "A simple utility for diffing two dates"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.0"
thiserror = "1.0.38"
